--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <title>GTM Playground</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.15/codemirror.min.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.15/theme/monokai.min.css" />
+
+  <!-- CodeMirror CSS & Theme -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.16/codemirror.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.16/theme/eclipse.min.css" />
+
   <style>
     body {
       font-family: sans-serif;
@@ -12,7 +15,7 @@
       max-width: 1000px;
       margin: auto;
     }
-    input, button {
+    input, button, textarea {
       font-size: 16px;
     }
     input {
@@ -23,6 +26,24 @@
       padding: 8px 12px;
       cursor: pointer;
       margin-bottom: 5px;
+    }
+    .CodeMirror {
+      font-size: 18px;
+      border: 1px solid #ddd;
+      height: auto;
+    }
+    .preset-wrapper {
+      display: flex;
+      gap: 10px;
+      align-items: flex-start;
+      margin-bottom: 20px;
+      border-bottom: 1px solid #ddd;
+      padding-bottom: 20px;
+    }
+    .preset-buttons {
+      display: flex;
+      flex-direction: column;
+      flex-shrink: 0;
     }
     .label {
       font-weight: bold;
@@ -39,19 +60,6 @@
     .small-button {
       padding: 4px 8px;
       font-size: 14px;
-    }
-    .preset-wrapper {
-      display: flex;
-      gap: 10px;
-      align-items: flex-start;
-      margin-bottom: 20px;
-      border-bottom: 1px solid #ddd;
-      padding-bottom: 20px;
-    }
-    .preset-buttons {
-      display: flex;
-      flex-direction: column;
-      flex-shrink: 0;
     }
     .preset-header {
       font-size: 18px;
@@ -76,7 +84,11 @@
       <button class="small-button" onclick="copyCustom()">Copy</button>
     </div>
     <div style="flex: 1;">
-      <div id="customEditor" style="height: 200px; border: 1px solid #ccc;"></div>
+      <textarea id="customJson">// Example:
+dataLayer.push({
+  event: "custom_event",
+  my_value: 123
+});</textarea>
     </div>
   </div>
 
@@ -87,46 +99,45 @@
   <div class="label">Test Events (editable in <code>datalayer.js</code>)</div>
   <div id="presetsArea"></div>
   <button onclick="savePresets()">💾 Save Changes to localStorage</button>
-  <p style="margin-top: 0; color: gray;">Gem ændringer, så de bevares ved reload.</p>
   <button onclick="copyAllAsDataLayer()">📋 Copy ALL as datalayer.js file</button>
-  <p style="margin-top: 0; color: gray;">Kopierer alle events i formatet klar til <code>datalayer.js</code>.</p>
   <button onclick="resetPresets()">♻️ Reset and use datalayer.js</button>
-  <p style="margin-top: 0; color: gray;">Fjerner gemte events og henter igen fra <code>datalayer.js</code>.</p>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.15/codemirror.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.15/mode/javascript/javascript.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.15/addon/edit/matchbrackets.min.js"></script>
+  <!-- CodeMirror JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.16/codemirror.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.16/mode/javascript/javascript.min.js"></script>
+
   <script src="datalayer.js"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    let cmEditor;
+
+    let customEditor;
+    window.addEventListener('load', () => {
+      customEditor = CodeMirror.fromTextArea(document.getElementById('customJson'), {
+        lineNumbers: true,
+        mode: 'javascript',
+        theme: 'eclipse',
+        tabSize: 2,
+        viewportMargin: Infinity
+      });
+      const lastId = localStorage.getItem('gtm_id');
+      if (lastId) document.getElementById('gtmId').value = lastId;
+      loadPresets();
+    });
 
     function loadGTM() {
       const id = document.getElementById('gtmId').value.trim();
-      if (!id.match(/^GTM-[A-Z0-9]+$/i)) {
-        alert('Invalid GTM ID');
-        return;
-      }
+      if (!id.match(/^GTM-[A-Z0-9]+$/i)) return alert('Invalid GTM ID');
       localStorage.setItem('gtm_id', id);
       const script = document.createElement('script');
       script.src = 'https://www.googletagmanager.com/gtm.js?id=' + id;
       script.async = true;
       document.head.appendChild(script);
       dataLayer.push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
-
-      const iframe = document.createElement('iframe');
-      iframe.src = `https://www.googletagmanager.com/ns.html?id=${id}`;
-      iframe.height = 0;
-      iframe.width = 0;
-      iframe.style.display = 'none';
-      iframe.style.visibility = 'hidden';
-      document.body.appendChild(iframe);
     }
 
     function runCustom() {
       try {
-        const raw = cmEditor.getValue();
-        new Function(raw)();
+        new Function(customEditor.getValue())();
         log('✅ Ran custom JS');
       } catch (e) {
         log('❌ Error: ' + e.message);
@@ -134,7 +145,7 @@
     }
 
     function copyCustom() {
-      navigator.clipboard.writeText(cmEditor.getValue()).then(() => {
+      navigator.clipboard.writeText(customEditor.getValue()).then(() => {
         log('📋 Copied custom JS');
       });
     }
@@ -142,20 +153,6 @@
     function log(msg) {
       document.getElementById('logOutput').textContent = msg;
       console.log(msg);
-    }
-
-    const defaultPresets = window.gtmPresets || [];
-
-    function loadPresets() {
-      const saved = localStorage.getItem('presets_full_js');
-      const presets = saved ? JSON.parse(saved) : defaultPresets;
-
-      const container = document.getElementById('presetsArea');
-      container.innerHTML = '';
-
-      presets.forEach((preset, i) => {
-        container.appendChild(renderPreset(preset, i));
-      });
     }
 
     function renderPreset(preset, index) {
@@ -180,16 +177,26 @@
       label.className = 'preset-header';
       label.textContent = 'Event: ' + (preset.name || `custom_${index + 1}`);
 
+      const editorContainer = document.createElement('div');
+      editorContainer.style.flex = '1';
+
       const textarea = document.createElement('textarea');
-      textarea.className = 'preset-textarea';
-      textarea.dataset.index = index;
-      textarea.dataset.name = preset.name || `custom_${index + 1}`;
-      textarea.value = preset.code;
-      textarea.rows = 10;
+      editorContainer.appendChild(label);
+      editorContainer.appendChild(textarea);
+
+      const editor = CodeMirror.fromTextArea(textarea, {
+        lineNumbers: true,
+        mode: 'javascript',
+        theme: 'eclipse',
+        tabSize: 2,
+        viewportMargin: Infinity
+      });
+      editor.setValue(preset.code);
+      editor.setSize("100%", "150px");
 
       runBtn.onclick = () => {
         try {
-          new Function(textarea.value)();
+          new Function(editor.getValue())();
           log(`✅ Executed: ${label.textContent}`);
         } catch (e) {
           log('❌ Error parsing JS: ' + e.message);
@@ -197,21 +204,20 @@
       };
 
       copyBtn.onclick = () => {
-        textarea.select();
-        document.execCommand('copy');
-        log('📋 Copied as dataLayer.push');
+        navigator.clipboard.writeText(editor.getValue()).then(() => {
+          log('📋 Copied as dataLayer.push');
+        });
       };
 
       copyDLBtn.onclick = () => {
-        const name = textarea.dataset.name || `custom_${index + 1}`;
-        const fullBlock =
-`// --- ${name} START ---
+        const name = preset.name || `custom_${index + 1}`;
+        const block = `// --- ${name} START ---
 {
   name: "${name}",
-  code: \`${textarea.value}\`
+  code: \`${editor.getValue()}\`
 },
 // --- ${name} END ---`;
-        navigator.clipboard.writeText(fullBlock).then(() => {
+        navigator.clipboard.writeText(block).then(() => {
           log('📋 Copied as datalayer.js block');
         });
       };
@@ -220,70 +226,62 @@
       buttons.appendChild(copyBtn);
       buttons.appendChild(copyDLBtn);
 
-      const container = document.createElement('div');
-      container.style.flex = '1';
-      container.appendChild(label);
-      container.appendChild(textarea);
-
       wrapper.appendChild(buttons);
-      wrapper.appendChild(container);
+      wrapper.appendChild(editorContainer);
       return wrapper;
     }
 
+    function loadPresets() {
+      const saved = localStorage.getItem('presets_full_js');
+      const presets = saved ? JSON.parse(saved) : window.gtmPresets || [];
+      const container = document.getElementById('presetsArea');
+      container.innerHTML = '';
+      presets.forEach((preset, i) => {
+        container.appendChild(renderPreset(preset, i));
+      });
+    }
+
     function savePresets() {
-      const all = document.querySelectorAll('.preset-textarea');
-      const updated = Array.from(all).map((el) => {
-        const wrapper = el.closest('.preset-wrapper');
-        const label = wrapper.querySelector('.preset-header').textContent;
-        const name = label.replace('Event: ', '').trim();
-        return { name, code: el.value };
+      const editors = document.querySelectorAll('.CodeMirror');
+      const updated = Array.from(editors).map((cm, i) => {
+        const name = document.querySelectorAll('.preset-header')[i].textContent.replace('Event: ', '').trim();
+        return { name, code: cm.CodeMirror.getValue() };
       });
       localStorage.setItem('presets_full_js', JSON.stringify(updated));
       log('💾 Presets saved to localStorage');
       loadPresets();
     }
 
-    function resetPresets() {
-      localStorage.removeItem('presets_full_js');
-      log('♻️ LocalStorage cleared. Reloading datalayer.js presets…');
-      const fallbackPresets = window.gtmPresets || [];
-      const container = document.getElementById('presetsArea');
-      container.innerHTML = '';
-      fallbackPresets.forEach((preset, i) => {
-        container.appendChild(renderPreset(preset, i));
-      });
-    }
-
     function copyAllAsDataLayer() {
-      const all = document.querySelectorAll('.preset-textarea');
-      const eventBlocks = Array.from(all).map((el, i) => {
-        const name = el.dataset.name || `custom_${i + 1}`;
-        const code = el.value;
-        return `// --- ${name} START ---\n{\n  name: "${name}",\n  code: \`${code}\`\n},\n// --- ${name} END ---`;
+      const editors = document.querySelectorAll('.CodeMirror');
+      const blocks = Array.from(editors).map((cm, i) => {
+        const name = document.querySelectorAll('.preset-header')[i].textContent.replace('Event: ', '').trim();
+        return `// --- ${name} START ---
+{
+  name: "${name}",
+  code: \`${cm.CodeMirror.getValue()}\`
+},
+// --- ${name} END ---`;
       });
-      const finalCode = `const presetEvents = [\n${eventBlocks.join('\n\n')}\n];\n\nwindow.gtmPresets = presetEvents;`;
-      navigator.clipboard.writeText(finalCode).then(() => {
+      const full = `const presetEvents = [
+${blocks.join('
+
+')}
+];
+
+window.gtmPresets = presetEvents;`;
+      navigator.clipboard.writeText(full).then(() => {
         log('📋 All events copied as datalayer.js file');
       });
     }
 
-    window.addEventListener('load', () => {
-      cmEditor = CodeMirror(document.getElementById("customEditor"), {
-        value: `// Example:\ndataLayer.push({\n  event: "custom_event",\n  my_value: 123\n});`,
-        mode: "javascript",
-        theme: "monokai",
-        lineNumbers: true,
-        lineWrapping: true,
-        matchBrackets: true
-      });
-
-      const lastId = localStorage.getItem('gtm_id');
-      if (lastId) document.getElementById('gtmId').value = lastId;
+    function resetPresets() {
+      localStorage.removeItem('presets_full_js');
+      log('♻️ LocalStorage cleared. Reloading datalayer.js presets…');
       loadPresets();
-    });
+    }
   </script>
 </body>
 </html>
-
 
 
