--- a/index.html
+++ b/index.html
@@ -238,23 +238,25 @@ dataLayer.push({event: "custom_event", my_value: 123});</textarea>
       loadPresets();
     }
 
-    function copyAllAsDataLayer() {
-      const editors = document.querySelectorAll('.CodeMirror');
-      const names = document.querySelectorAll('.preset-header');
-      const blocks = Array.from(editors).map((cm, i) => {
-        const name = names[i].textContent.replace('Event: ', '');
-        const code = cm.CodeMirror.getValue();
-        return `// --- ${name} START ---
-{
-  name: "${name}",
-  code: \`${code}\`
-},
-// --- ${name} END ---`;
-      });
-      const full = `const presetEvents = [
-${blocks.join('
+function copyAllAsDataLayer() {
+  var editors = document.querySelectorAll('.CodeMirror');
+  var names = document.querySelectorAll('.preset-header');
+  var blocks = Array.prototype.map.call(editors, function(cm, i) {
+    var name = names[i].textContent.replace('Event: ', '');
+    var code = cm.CodeMirror.getValue();
+    return '// --- ' + name + ' START ---\n' +
+      '{\n' +
+      '  name: "' + name + '",\n' +
+      '  code: `' + code + '`\n' +
+      '},\n' +
+      '// --- ' + name + ' END ---';
+  });
 
-')}
+  var full = 'const presetEvents = [\n' + blocks.join('\n\n') + '\n];\n\nwindow.gtmPresets = presetEvents;';
+  navigator.clipboard.writeText(full).then(function() {
+    log('✅ All events copied as datalayer.js format');
+  });
+}
 ];
 
 window.gtmPresets = presetEvents;`;
