--- a/1.0.0/index.html
+++ b/1.0.0/index.html
@@ -104,7 +104,7 @@ dataLayer.push({
 <button onclick="resetPresets()">♻️ Reset and use datalayer.js</button>
 <p style="margin-top: 0; color: gray;">Fjerner gemte events og henter igen fra <code>datalayer.js</code>.</p>
 
-  <script src="1.0.0/datalayer.js"></script>
+  <script src="datalayer.js"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
 
